fix SpenddingService, Controller 오류 수정, Repository 이름 변경, application mySQL 비밀번호 삭제